# clio-bringup

./: README.md  package.xml  setup.cfg  setup.py
clio_bringup/: waypoint_follower_client.py
config/: nav2_params.yaml
launch/: localization.launch.py  mapping.launch.py  nav_bringup.launch.py  navigation.launch.py  register_localization.launch.py
